# claion

./: .gitignore  .pre-commit-config.yaml  CLAUDE.md  CONTRIBUTING.md  Dockerfile  README.md  codecov.yml  docker-compose.yml  pyproject.toml
.github/workflows/: ci.yml
notebooks/: 001_basic_train.ipynb  002_original_autoencoder.ipynb  003_depth_original_autoencoder.ipynb  004_try_speecht5.ipynb  006_whisper_size_comparison.ipynb  007_eda_whisper_size_comparison.ipynb  008_understand_processors.ipynb  009_split_audio.ipynb  test.py
src/claion/: __main__.py
src/claion/core/: accent_evaluator.py
src/claion/data/: utils.py  utils_test.py
src/claion/data/speechocean/: process_all.py
src/claion/data/speechocean762/: display_adults.py  download.py  eda.py  extract_adults.py  process_all.py
src/claion/pipes/: batch_sts.py  sb_sts.py
src/claion/schemas/: accent_evaluator_types.py
src/claion/utils/: audio_spliter.py
src/clarion-ai/: __main__.py
src/clarion_ai/: __main__.py
src/clarion_ai/data/: speechocean762.py  utils.py  utils_test.py
src/clarion_ai/data/speechocean/: display_adults.py  download.py  eda.py  extract_adults.py
src/clarion_ai/pipes/: sts_sb.py
tests/: main_test.py
tests/core/: accent_evaluator_test.py
tests/utils/: audio_spliter_test.py
