[project]
name = "claion"
version = "0.1.0"
description = "Claion is an innovative AI-powered tool designed to enhance global English communication by converting non-native English speech into clear, natural pronunciation in real-time."
readme = "README.md"
requires-python = ">=3.12"
license = { text = "MIT" }
authors = [{ name = "Masamune Ishihara", email = "mwishiha@ucsc.edu" }]
dependencies = [
    "click>=8.1.8",
    "datasets>=3.3.1",
    "iso639-lang>=2.6.0",
    "librosa>=0.10.2.post1",
    "numpy==1.26.4",
    "polars>=1.22.0",
    "pydantic>=2.10.6",
    "rich>=13.9.4",
    "soundfile>=0.12.1",
    "speechbrain>=1.0.2",
    "torch>=2.6.0",
    "torchaudio>=2.6.0",
    "transformers>=4.49.0",
]

[dependency-groups]
dev = [
    "pre-commit>=4.1.0",
    "pytest-cov>=6.0.0",
    "pytest>=8.3.4",
    "ruff>=0.9.6",
    "pyright>=1.1.394",
    "invoke>=2.2.0",
]

[tool.uv]
package = true

[project.scripts]
claion = "claion.__main__:main"

[tool.ruff]
line-length = 119
exclude = [".venv", "venv", "migrations", "__pycache__", "build", "dist"]
target-version = "py312"

[tool.ruff.lint]
select = ["C", "E", "F", "I", "W"]
fixable = ["ALL"]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
line-ending = "auto"

[tool.coverage.run]
source = ["src"]
omit = ["*/tests/*", "*_test.py"]

[tool.pyright]
venvPath = "."
venv = ".venv"
pythonVersion = "3.13"
typeCheckingMode = "basic"
reportMissingImports = true
reportMissingTypeStubs = false
useLibraryCodeForTypes = false
include = ["src", "tests"]
